--- a/src/scss/_reset.scss
+++ b/src/scss/_reset.scss
@@ -6,6 +6,11 @@
   box-sizing: border-box;
 }
 
+html,
+body {
+  overflow-x: hidden;
+}
+
 body,
 textarea {
   font-family: $font-stack;
